// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractOpts Returns default options when empty object is passed 1`] = `
{
  "commit": {
    "enableAfterEndingDrag": true,
    "enableForScrollOnly": true,
  },
  "containersTransition": {
    "enable": true,
    "margin": 10,
  },
  "restrictions": {
    "container": {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
  },
  "restrictionsStatus": {
    "isContainerRestricted": false,
    "isSelfRestricted": false,
  },
  "scroll": {
    "enable": true,
    "initialSpeed": 10,
    "threshold": {
      "horizontal": 15,
      "vertical": 15,
    },
  },
  "threshold": {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with input restrictions/allowLeavingFromBottom 1`] = `
{
  "commit": {
    "enableAfterEndingDrag": true,
    "enableForScrollOnly": true,
  },
  "containersTransition": {
    "enable": true,
    "margin": 10,
  },
  "restrictions": {
    "container": {
      "allowLeavingFromBottom": false,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
  },
  "restrictionsStatus": {
    "isContainerRestricted": true,
    "isSelfRestricted": false,
  },
  "scroll": {
    "enable": true,
    "initialSpeed": 10,
    "threshold": {
      "horizontal": 15,
      "vertical": 15,
    },
  },
  "threshold": {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with input restrictions/threshold/scroll 1`] = `
{
  "commit": {
    "enableAfterEndingDrag": true,
    "enableForScrollOnly": true,
  },
  "containersTransition": {
    "enable": false,
    "margin": 10,
  },
  "restrictions": {
    "container": {
      "allowLeavingFromBottom": false,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": false,
    },
  },
  "restrictionsStatus": {
    "isContainerRestricted": true,
    "isSelfRestricted": true,
  },
  "scroll": {
    "enable": true,
    "initialSpeed": 10,
    "threshold": {
      "horizontal": 9000,
      "vertical": 15,
    },
  },
  "threshold": {
    "horizontal": 9000,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with input scroll/threshold 1`] = `
{
  "commit": {
    "enableAfterEndingDrag": true,
    "enableForScrollOnly": true,
  },
  "containersTransition": {
    "enable": true,
    "margin": 10,
  },
  "restrictions": {
    "container": {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
  },
  "restrictionsStatus": {
    "isContainerRestricted": false,
    "isSelfRestricted": false,
  },
  "scroll": {
    "enable": true,
    "initialSpeed": 10,
    "threshold": {
      "horizontal": 1000,
      "vertical": 15,
    },
  },
  "threshold": {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with input scroll/threshold/enable 1`] = `
{
  "commit": {
    "enableAfterEndingDrag": true,
    "enableForScrollOnly": true,
  },
  "containersTransition": {
    "enable": true,
    "margin": 10,
  },
  "restrictions": {
    "container": {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
  },
  "restrictionsStatus": {
    "isContainerRestricted": false,
    "isSelfRestricted": false,
  },
  "scroll": {
    "enable": false,
    "initialSpeed": 10,
    "threshold": {
      "horizontal": 1000,
      "vertical": 15,
    },
  },
  "threshold": {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with self restrictions/allowLeavingFromLeft+right 1`] = `
{
  "commit": {
    "enableAfterEndingDrag": true,
    "enableForScrollOnly": true,
  },
  "containersTransition": {
    "enable": true,
    "margin": 10,
  },
  "restrictions": {
    "container": {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": false,
      "allowLeavingFromRight": false,
      "allowLeavingFromTop": true,
    },
  },
  "restrictionsStatus": {
    "isContainerRestricted": false,
    "isSelfRestricted": true,
  },
  "scroll": {
    "enable": true,
    "initialSpeed": 10,
    "threshold": {
      "horizontal": 15,
      "vertical": 15,
    },
  },
  "threshold": {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;
